fixed results screen stats spacing

--- a/src/styles/componentStyles/typing-test-results.scss
+++ b/src/styles/componentStyles/typing-test-results.scss
@@ -30,19 +30,18 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, 5rem);
 
-
         .grid-item {
-            display: grid;
+            display: block;
             text-align: center;
-
-            .label {
-                margin-top: -2.6rem;
-                color: var(--base-font-colour);
-            }
 
             .score {
                 color: var(--primary-highlight-colour);
                 font-size: 2.3rem;
+            }
+
+            .label {
+                margin-top: -0.7rem;
+                color: var(--base-font-colour);
             }
 
             &.wpm {
